# Data-Manager

./: .coverage  .gitignore
data_manage/: README.md  docker-compose.yml  example.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup.sh
data_manage/backend/: .env.docker  .env.example  Dockerfile  config.py  database.py  main.py  requirements.txt
data_manage/backend/models/: __init__.py  file_permission.py  file_provenance.py  share_link.py  team.py  user.py
data_manage/backend/routers/: __init__.py  activity.py  audit.py  auth.py  files.py  permissions.py  provenance.py  share.py  users.py
data_manage/backend/services/: auth_service.py  permission_service.py  provenance_service.py  share_service.py
data_manage/data/: missing_apmc_details_2026-02-10.csv  testimonial.json  testimonial.xlsx  video_transcripts_2026-02-20_2_done.csv
data_manage/data_manager/: __init__.py  config.py  exceptions.py  manager.py  metadata.py  readers.py  utils.py  writers.py
data_manage/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
data_manage/frontend/src/: App.tsx  index.css
data_manage/frontend/src/components/: Dashboard.tsx
data_manage/frontend/src/contexts/: AuthContext.tsx
data_manage/frontend/src/hooks/: useFiles.ts
data_manage/frontend/src/services/: api.ts
data_manage/tests/: __init__.py  test_manager.py  test_metadata.py  test_readers.py  test_writers.py
data_manage/tests/fixtures/: sample.csv  sample.json  sample.jsonl  sample.xlsx
(+18 files in other folders)
